# OpenEAI-Arm

./: .gitattributes  LICENSE  README.md  THIRD_PARTY_NOTICES
CAD/STEP1/: JXS-01-03.DWG  JXS-01-05.DWG
CAD/STEP2/: JXS-02-01.DWG  JXS-02-04.DWG
CAD/STEP4/: JXS-04-01.DWG
STEP/STEP1/: JXS-01-01.STEP  JXS-01-02.STEP  JXS-01-03.STEP  JXS-01-04.STEP  JXS-01-05.STEP
STEP/STEP2/: B6704ZZ.STEP-1.SLDPRT  JXS-02-01.STEP  JXS-02-02.STEP  JXS-02-03.STEP  JXS-02-04.STEP  casing2.STEP
STEP/STEP3/: JXS-03-01.STEP  JXS-03-02.STEP  casing3.STEP
STEP/STEP4/: JXS-04-01.STEP  JXS-04-02.STEP  JXS-04-03.STEP  JXS-04-04.STEP  JXS-04-05.STEP  JXS-04-06.STEP  JXS-04-07.STEP
STEP/STEP5/: JXS-05-01.STEP
STL/: casing2.STL
URDF/: CMakeLists.txt  package.xml
URDF/launch/: display.launch  gazebo.launch
URDF/meshes/: base_link.STL  link1.STL
URDF/urdf/: STEP.csv  STEP.urdf
asserts/images/: Readme.md
asserts/videos/: Readme.md
assets/: README.md
assets/images/: README.md  Readme.md
assets/videos/: README.md
hardware/: .gitattributes  README.md
hardware/STEP/: README.md
hardware/STEP/STEP1/: JXS-01-01.STEP  JXS-01-02.STEP  JXS-01-03.STEP  JXS-01-04.STEP  JXS-01-05.STEP
hardware/STEP/STEP2/: JXS-02-01.STEP  JXS-02-02.STEP  JXS-02-03.STEP  JXS-02-04.STEP  casing2.STEP
hardware/STEP/STEP3/: JXS-03-01.STEP  JXS-03-02.STEP  casing3.STEP
hardware/STEP/STEP4/: JXS-04-01.STEP  JXS-04-02.STEP  JXS-04-03.STEP  JXS-04-04.STEP  JXS-04-05.STEP  JXS-04-06.STEP  JXS-04-07.STEP
hardware/STEP/STEP5/: JXS-05-01.STEP
hardware/STEP/STEP6/: Clamping Jaw v3-left.STEP  Clamping Jaw v3.STEP  JXS-07-05.STEP  JXS-07-08.STEP  JXS-07-09.STEP  switch.STEP
hardware/URDF/: CMakeLists.txt  STEP.SLDASM  package.xml
hardware/URDF/config/: joint_names_STEP.yaml
hardware/URDF/launch/: display.launch  gazebo.launch
hardware/URDF/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL
hardware/URDF/urdf/: STEP.csv  STEP.urdf
hardware/assembly/: DM_4340__3D20240822_1_2_1__ASM__ASM-2.STEP-1.STEP  GRIP.STEP  README.md  STEP.SLDASM
hardware/assembly/STEP1/: JXS-01-01.STEP  JXS-01-02.STEP  JXS-01-03.STEP  JXS-01-04.STEP  JXS-01-05.STEP  STEP1.STEP
hardware/assembly/STEP2/: B6704ZZ.STEP-1.SLDPRT  JXS-02-01.STEP  JXS-02-02.STEP  JXS-02-03.STEP  JXS-02-04.STEP  STEP2.SLDASM  STEP2.STEP  casing2.STEP
hardware/assembly/STEP3/: JXS-03-01.STEP  JXS-03-02.STEP  STEP3.STEP  casing3.STEP  ~$JXS-03-01.SLDPRT
hardware/assembly/STEP4/: JXS-04-01.STEP  JXS-04-02.STEP  JXS-04-03.STEP  JXS-04-04.STEP  JXS-04-05.STEP  JXS-04-06.STEP  JXS-04-07.STEP  STEP4.STEP
hardware/assembly/STEP5/: JXS-05-01.STEP  STEP5.STEP
hardware/assembly/STEP6/: DM-J4310-2EC-V1_1__3D_20240822__ASM-1.STEP-1-1.STEP
hardware/bom/: BOM.xlsx  README.md
hardware/cad/: README.md
hardware/calibration/: README.md
hardware/drawings/: README.md
hardware/drawings/STEP1/: JXS-01-01.DWG  JXS-01-02.DWG  (+3 more)
hardware/stl/: README.md  casing2.STL  casing3.STL
software/: .gitignore  CMakeLists.txt  README.md  activate.sh
software/apps/: demo.cpp  read_motors.cpp  test_gravity_compensation.cpp  test_openeai_arm.cpp  test_openeai_arm.py  test_openeai_arm_drag.cpp  test_openeai_arm_ik.cpp  test_openeai_arm_locate.cpp
software/assets.old/: sii_arm_0.urdf
software/assets.old/sii_arm/: CMakeLists.txt  package.xml
software/assets.old/sii_arm/launch/: display.launch  gazebo.launch
software/assets.old/sii_arm/urdf/: sii_arm.csv  sii_arm.urdf
software/assets.old/sii_arm_v2/: CMakeLists.txt  package.xml
software/assets.old/sii_arm_v2/launch/: gazebo.launch
software/assets.old/sii_arm_v2/urdf/: STEP.origin.urdf  STEP.sdf  STEP.urdf
software/assets.old/siiarm_urdf_ros2/: CMakeLists.txt  package.xml
software/assets.old/siiarm_urdf_ros2/launch/: display.launch  launch.py
software/assets.old/siiarm_urdf_ros2/urdf/: STEP.csv  STEP.urdf
software/assets/openeai_arm_urdf_ros2/: CMakeLists.txt
software/assets/openeai_arm_urdf_ros2/urdf/: STEP.csv  STEP.sdf  STEP.urdf
software/configs/: default.yml  default_right.yml
software/dataset_tools/: README.md
software/drivers/: README.md
software/examples/: README.md
software/include/: OpenEAIArm.hpp  config_loader.hpp  dm.hpp  dm_manager.hpp  interpolator.hpp  kd_solver.hpp  motor_controller.hpp  serial_port.hpp  sim_motor_manager.hpp
software/include/urdf/: model.h  urdfdom_compatibility.h
software/low_level_control/: README.md
software/python/: CMakeLists.txt  setup.py
software/python/OpenEAIArm/: OpenEAIArm_py.cpp  __init__.py
software/ros2/: .gitignore
software/ros2/src/openeai_arm/: CMakeLists.txt  package.xml
software/ros2/src/openeai_arm/examples/: OpenEAIArmROS2Operator.py  collect_data.py  collect_imu_data.py  config_left.yml  config_left_inference.yml  config_multi.yml  config_multi_inference.yml  config_right.yml  config_right_inference.yml  control_arm.py  gello_controller.py  inference.py  spacemouse.py  visualize_imu_data.py  vr.py
software/ros2/src/openeai_arm/rviz/: rviz2.rviz
software/ros2/src/openeai_arm/src/: OpenEAIArm_node.cpp
software/ros2/src/openeai_arm_urdf_ros2/: CMakeLists.txt  package.xml
software/ros2/src/openeai_arm_urdf_ros2/config/: joint_names_STEP.yaml
software/ros2/src/openeai_arm_urdf_ros2/launch/: launch.py
software/ros2/src/openeai_arm_urdf_ros2/meshes/: base_link.STL  link1.STL
software/ros2/src/openeai_arm_urdf_ros2/urdf/: STEP.urdf
software/scripts/: can_activate.sh  hdf52mp4.py  visualize_arm.py  visualize_csv.py  visualize_motor.py  visualize_motor_realtime.py  visualize_robot.py
software/src/: OpenEAIArm.cpp  config_loader.cpp  dm.cpp  dm_manager.cpp  kd_solver.cpp  motor_controller.cpp  serial_port.cpp  sim_motor_manager.cpp
software/src/kdl_parser/: kdl_parser.cpp
software/src/urdf/: model.cpp
software/teleop/: README.md
software/tests/: demo.cpp  read_motors.cpp  test_gravity_compensation.cpp  test_openeai_arm.cpp  test_openeai_arm_drag.cpp  test_openeai_arm_ik.cpp  test_openeai_arm_locate.cpp  test_openeai_arm_set_mode.cpp
software/vla/: README.md
(+19 files in other folders)
