<package format="2">
  <name>openeai_arm_urdf_ros2</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for openeai_arm_urdf_ros2</p>
    <p>This package contains configuration data, 3D models and launch files
for openeai arm robot</p>
  </description>
  <author>Luoyi Fan</author>
  <maintainer email="luoyi_fan@sjtu.edu.cn">Luoyi Fan, Shanghai Innovation Institude</maintainer>
  <license>BSD</license>
  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>